--- a/test/fixtures/invoices.yml
+++ b/test/fixtures/invoices.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  date: 2018-08-10
+  date: 2018-08-12
   number: 1
   amount: 1
   status: MyString
-  milestone_type: MyString
+  milestonetype: MyString
   customerpo: one
 
 two:
-  date: 2018-08-10
+  date: 2018-08-12
   number: 1
   amount: 1
   status: MyString
-  milestone_type: MyString
+  milestonetype: MyString
   customerpo: two
