--- a/test/fixtures/customerquotes.yml
+++ b/test/fixtures/customerquotes.yml
@@ -2,12 +2,12 @@
 
 one:
   name: MyString
-  date: 2018-08-10
+  date: 2018-08-12
   amount: 1
-  customerpo: one
+  cost_center: one
 
 two:
   name: MyString
-  date: 2018-08-10
+  date: 2018-08-12
   amount: 1
-  customerpo: two
+  cost_center: two
