--- a/test/fixtures/customerpos.yml
+++ b/test/fixtures/customerpos.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  date: 2018-08-12
+  date: 2018-08-14
   number: 1
+  amount: 1
   customerquote: one
 
 two:
-  date: 2018-08-12
+  date: 2018-08-14
   number: 1
+  amount: 1
   customerquote: two
