--- a/test/fixtures/scopes.yml
+++ b/test/fixtures/scopes.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: 
+  scope_type: MyString
 
 two:
-  type: 
+  scope_type: MyString
